--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ build-*/
 CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
-Makefile
 
 # Clutter
 *.swp
@@ -16,6 +15,7 @@ Makefile
 *.DS_Store
 *.idea/
 .vscode/
+.cache/
 
 # Compiler outputs
 *.o
