--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,5 +14,13 @@ target_link_libraries(matrix_tests
         GTest::gtest_main
 )
 
+add_executable(rational_tests test_rational.cpp)
+target_link_libraries(rational_tests
+    PRIVATE
+        lin_alg
+        GTest::gtest_main
+)
+
 include(GoogleTest)
 gtest_discover_tests(matrix_tests)
+gtest_discover_tests(rational_tests)
